--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,29 +1,51 @@
+%gradient-text {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#ff8a00),
+    to(#da1b60)
+  );
+  background: linear-gradient(to right, #ff8a00, #da1b60);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+  text-shadow: none;
+}
+
 .App {
-  text-align: center;
+  background-color: #100e17;
+  padding: 6rem;
+  font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
+  line-height: 1.4;
+  font-weight: 700;
+  font-size: 16px;
 
   :global {
-    .App-logo {
+    .AppLogo {
       display: block;
       width: 12rem;
       height: auto;
       max-width: 100%;
-      margin: 3rem auto;
-      animation: AppLogoSpin infinite 15s linear;
     }
 
-    .App-header {
-      background-color: #282c34;
+    .AppHeader {
       min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      font-size: calc(10px + 2vmin);
       color: white;
     }
 
-    .App-link {
-      color: #61dafb;
+    a {
+      @extend %gradient-text;
+      color: royalblue;
+    }
+
+    hr {
+      border: 0;
+      height: 1px;
+      box-shadow: 0 1px 0 #26262b;
     }
   }
 }
